force-app/main/default/objects/MM_Response_Session__c/MM_Response_Session__c.object-meta.xml
<CustomObject>
    <description>Tracks a user’s completion of a questionnaire</description>
    <label>Response Session</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>