force-app/main/default/objects/MM_Response_Session__c/fields/MM_End_Time__c.field-meta.xml
<CustomField>
    <fullName>MM_End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>