force-app/main/default/objects/MM_Response_Session__c/fields/MM_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>MM_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>