force-app/main/default/objects/MM_Response_Session__c/fields/MM_Summary__c.field-meta.xml
<CustomField>
    <fullName>MM_Summary__c</fullName>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>