force-app/main/default/objects/MM_Response_Session__c/fields/MM_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>MM_Total_Score__c</fullName>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>