force-app/main/default/objects/MM_Response_Session__c/fields/MM_User__c.field-meta.xml
<CustomField>
    <fullName>MM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MM User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Response Sessions</relationshipLabel>
    <relationshipName>Response_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>