force-app/main/default/objects/MM_Response_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MM_Status__c</columns>
    <columns>MM_Total_Score__c</columns>
    <columns>MM_Start_Time__c</columns>
    <columns>MM_End_Time__c</columns>
    <columns>MM_Summary__c</columns>
    <columns>MM_User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>